--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,6 @@ spring.application.name = CidadeVeridiaOficial
 spring.datasource.url = jdbc:postgresql://aws-1-us-east-2.pooler.supabase.com:5432/postgres?sslmode=require
 spring.datasource.username= postgres.fxfaenrmvtploafppxwa
 spring.datasource.password= Veridia12345
+spring.flyway.baseline-on-migrate=true
+
 
