--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,7 @@ spring.datasource.url = jdbc:postgresql://aws-1-us-east-2.pooler.supabase.com:54
 spring.datasource.username= postgres.fxfaenrmvtploafppxwa
 spring.datasource.password= Veridia12345
 spring.flyway.baseline-on-migrate=true
+spring.web.cors.allowed-origins=*
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,PATCH
 
 
